<resources>
    <string name="app_name">社会治理网格通</string>
    <string name="app_name_jinghai">服务通</string>
    <string name="app_splash_copyright">江苏微雀</string>
    <string name="app_splash_copyright_jinghai">中国电子系统技术有限公司</string>
    <string name="app_name_one">梳网清格</string>
    <string name="app_name_yun">云创空间</string>
    <string name="app_name_gulou">鼓楼网格通</string>
    <string name="app_name_yingji">应急管理</string>
    <string name="postpone">延期</string>
    <string name="app_name_opf">基层治理</string>
    <string name="placeholder_s">%1$sS</string>
    <string name="today_integral_s">%1$s积分</string>
    <string name="standard_address_t_s">%1$s信息</string>
    <string name="standard_address_c_s">%1$s地址编码</string>
    <string name="up_load_max_file_number">最多只能上传%1$d张图片</string>
    <string name="video_up_load_max_file_number">最多只能上传%1$d个视频</string>
    <string name="party_detail_info">党支部&#160;&#160;%1$s\n区域&#160;&#160;%2$s</string>
    <string name="search_state">搜索\“%1$s\”</string>
    <string name="jump"><![CDATA[跳过 >]]></string>
    <string name="jumpp">跳过</string>
    <string name="goto_home">进入主界面</string>
    <string name="hint_login_username">输入手机号码</string>
    <string name="hint_login_name">输入登录账号</string>
    <string name="old_password">输入旧密码</string>
    <string name="input_password">输入新密码(6-24位字母加数字)</string>
    <string name="again_password">重复新密码(6-24位字母加数字)</string>
    <string name="hint_login_auth_code">输入验证码</string>
    <string name="hint_login_password">输入密码</string>
    <string name="hint_login_auth_code_tw">输入图文验证码</string>
    <string name="login">立即登录</string>
    <string name="login_">立即登录</string>
    <string name="login_forget_pwd">忘记密码</string>
    <string name="register_new_user">注册新用户</string>
    <string name="contact_service">联系客服</string>
    <string name="about_we">关于我们</string>
    <string name="agenda">待办</string>
    <string name="my">我的</string>
    <string name="gather_info">信息采集</string>
    <string name="up_tell_intent">事件上报</string>
    <string name="up_tell">上报</string>
    <string name="identity_verification">身份核实</string>
    <string name="attendance_clock">考勤打卡</string>
    <string name="work_stat">工作统计</string>
    <string name="address_verification">地址核实</string>
    <string name="track_query">事件核实</string>
    <string name="backlog_task">轨迹查询</string>
    <string name="in_event">参与事件</string>
    <string name="contradiction">矛盾化解</string>
    <string name="grid_map">网格地图</string>
    <string name="to_do_tasks">待办任务</string>
    <string name="one_up">一键上报</string>
    <string name="one_cell">一键呼叫</string>
    <string name="grid_member">网格员-</string>
    <string name="grid_leader">网格长-</string>
    <string name="work_record">工作记录</string>
    <string name="record">记录</string>
    <string name="participate_event">参与事件</string>
    <string name="upload_list">上传列表</string>
    <string name="setting">设置</string>
    <string name="header_image">头像</string>
    <string name="my_name">姓名</string>
    <string name="age">年龄</string>
    <string name="gender">性别</string>
    <string name="be_born">出生日期</string>
    <string name="position">职位</string>
    <string name="unit">单位</string>
    <string name="unit_position">单位/职务</string>
    <string name="telephone">电话</string>
    <string name="id_number">身份证号</string>
    <string name="address">地址</string>
    <string name="scope">辖区范围</string>
    <string name="version_information">版本信息(二维码)</string>
    <string name="custom_behavior">com.weique.overhaul.v2.app.behavior.CustomBehavior</string>
    <string name="timeString">时间</string>
    <string name="event_type">事件类型</string>
    <string name="remove">清除</string>
    <string name="sure">确定</string>
    <string name="event_source">事件来源</string>
    <string name="event_theme">事件主题</string>
    <string name="phone_login">手机快捷登录</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="residue">剩余%1$d</string>
    <string name="data_count">共计%1$d条数据</string>
    <string name="input_phone">请输入正确的手机号码</string>
    <string name="auth_code_not_null">验证码不能为空</string>
    <string name="please_input_success_code">请输入正确的验证码</string>
    <string name="connect_network_hint">您需要链接网络,才能继续使用</string>
    <string name="integrated_with">导航</string>
    <string name="ove">取消</string>
    <string name="submit">提交</string>
    <string name="submit_use">提交并使用</string>
    <string name="affirm">确认</string>
    <string name="goto_set">去设置</string>
    <string name="event_hint">请输入事件描述，150字以内</string>
    <string name="photo_media">照片/视频</string>
    <string name="photo">照片</string>
    <string name="selet_event_titile">请选择事件标签</string>
    <string name="start_record">开始录音</string>
    <string name="mes">消息</string>
    <string name="mes_detail">消息详情</string>
    <string name="sys">扫一扫</string>
    <string name="flag_star">*</string>
    <string name="attendance">打卡签到</string>
    <string name="the_inspection_points">考核积分</string>
    <string name="work_line">巡检</string>
    <string name="foot_line">走访</string>
    <string name="evaluating">评价考核</string>
    <string name="statistical_work">工作统计</string>
    <string name="work">工作</string>
    <string name="version_update">版本更新</string>
    <string name="reset_password">修改密码</string>
    <string name="speech_setting">语音设置</string>
    <string name="form">来源：</string>
    <string name="registration_time">登记时间</string>
    <string name="source">来源</string>
    <string name="subordinate_grid">所属网格</string>
    <string name="attachment">附件</string>
    <string name="attachment_hint">添加附件</string>
    <string name="back">返回</string>
    <string name="integral">积分</string>
    <string name="all_reply">全部回复</string>
    <string name="go_back">返回</string>
    <string name="integral_all">累计积分：</string>
    <string name="see_detail">查看详情</string>
    <string name="history">历史</string>
    <string name="dis">吐槽</string>
    <string name="answer">我要答题</string>
    <string name="click_input">点击进入</string>
    <string name="text_explains">术业有专攻，道义有精论</string>
    <string name="start_answer">开始答题</string>
    <string name="text_explains_1">周而复始，如期而至</string>
    <string name="text_0">0</string>
    <string name="news_center">新闻中心</string>
    <string name="education">主题教育</string>
    <string name="notice">通知公告</string>
    <string name="party_activity">党建活动</string>
    <string name="mine">个人中心</string>
    <string name="more">更多</string>
    <string name="diss_detail">你的详细意见:</string>
    <string name="please_input_diss">请写下你的详细意见(0-150字)</string>
    <string name="diss_photo">请提供相关问题的截图或照片:</string>
    <string name="growth_integral">成长总积分</string>
    <string name="integral_ruel">积分规则</string>
    <string name="today_cumulative">今日已累计</string>
    <string name="recommend">推荐</string>
    <string name="all">全部</string>
    <string name="null_content">暂无内容</string>
    <string name="null_net_work">暂无网络</string>
    <string name="null_result">搜索无结果</string>
    <string name="collect">收藏</string>
    <string name="delete">删除</string>
    <string name="all_choice">全部频道</string>
    <string name="party_center">党建中心</string>
    <string name="integral_add_explain">1分/每日首次登录</string>
    <string name="read_articles">阅读文章</string>
    <string name="integral_add_explain_1">1分/每有效阅读一篇</string>
    <string name="do_answer">参与答题</string>
    <string name="do_c_answer">完成答题获得相应积分</string>
    <string name="is_finish">已完成</string>
    <string name="go_and_see">去看看</string>
    <string name="go_and_answer">去答题</string>
    <string name="input_search_content">输入搜索内容</string>
    <string name="history_search">历史搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="bencidati">本次答对题目</string>
    <string name="select_info_type">选择信息类型</string>
    <string name="search_info_type">搜索信息类型</string>
    <string name="get_info_fail">获取信息失败</string>
    <string name="input_keyword">请输入关键字</string>
    <string name="info_type">信息类型</string>
    <string name="person_info_detail">人员详细信息</string>
    <string name="person">人</string>
    <string name="family">户</string>
    <string name="family_address_detail">住户详细信息</string>
    <string name="thing">物</string>
    <string name="thing_address_info">公共设施详细信息</string>
    <string name="land">地</string>
    <string name="land_address_detail">常规地址详细信息</string>
    <string name="organization">组织</string>
    <string name="organization_detail">公司/商户等信息</string>
    <string name="go_in">进入</string>
    <string name="go_see">查看</string>
    <string name="go_see_handle">查看处理</string>
    <string name="is_answer">本套题已做答！</string>
    <string name="logout">安全退出</string>
    <string name="code_myself">自编码</string>
    <string name="code_event">事项单号</string>
    <string name="tier_code">层级代码</string>
    <string name="tier">层级</string>
    <string name="sub_info">下级</string>
    <string name="area_name">行政区域名称</string>
    <string name="standard_address_code">标准地址编码</string>
    <string name="standard_name">标准名称</string>
    <string name="up_address">上级地址</string>
    <string name="standard_address">标准地址</string>
    <string name="standard_address_name">标准地址名称</string>
    <string name="map_address">地图定位</string>
    <string name="remark">备注</string>
    <string name="required">(必填)</string>
    <string name="required_select">(必选)</string>
    <string name="address_required">标准地址名称(必填)</string>
    <string name="remark1">备注说明</string>
    <string name="lon_lat">经度:%1$f"\n纬度:%2$f</string>
    <string name="address_lon_lat">{\"lat\":%1$f,\"lng\":%2$f}</string>
    <string name="no_super_address">无上级地址</string>
    <string name="please_input">请输入</string>
    <string name="please_input_s">请输入(必填 )</string>
    <string name="sort">分类</string>
    <string name="status">状态</string>
    <string name="event_priority">事件等级</string>
    <string name="event_sort">事件分类</string>
    <string name="select_event_label">请选择事件标签</string>
    <string name="rapid_input">快捷输入</string>
    <string name="add_dot">添加地点</string>
    <string name="event_two">紧急事件</string>
    <string name="event_three">重大事件</string>
    <string name="event_one">普通事件</string>
    <string name="event_detail">事件详情</string>
    <string name="call">呼叫</string>
    <string name="send_back">退回</string>
    <string name="send_back_">撤回</string>
    <string name="order_status_text">订单状态</string>
    <string name="is_self_handle">是否自处理</string>
    <string name="slogan">共建共治共享</string>
    <string name="slogan1">人民安居乐业，社会安定有序</string>
    <string name="event_typr">事件类型：</string>
    <string name="prove">协同查验</string>
    <string name="invalid">作废</string>
    <string name="sign_in_text">签到</string>
    <string name="my_collect">我的收藏</string>
    <string name="add_new">新增</string>
    <string name="history_hint">历史记录</string>
    <string name="reset">重置</string>
    <string name="ei">立即体验</string>
    <string name="user_info_">个人信息</string>
    <string name="source_">来源：</string>
    <string name="detection">检测</string>
    <string name="next_speak">下次再说</string>
    <string name="update_new">马上更新</string>
    <string name="background_run">后台运行</string>
    <string name="dispose_agine">再次处理</string>
    <string name="dispose_stay">待处理</string>
    <string name="announcement_detail">通知详情</string>
    <string name="detail">详情</string>
    <string name="install">安装</string>
    <string name="loading">下载中</string>
    <string name="agreement">登录即表示同意</string>
    <string name="user_agreement">用户协议</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="think_again">再想想</string>
    <string name="consent">同意</string>
    <string name="expansion">展开</string>
    <string name="last_edit_time">最后编辑时间</string>
    <string name="start_chat">发起会话</string>
    <string name="check">查验</string>
    <string name="transformation_case">转为行政案件</string>
    <string name="id_card">0123456789xX</string>
</resources>