<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:ignore="MissingConstraints">

    <include layout="@layout/include_title" />

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_130"
        android:background="@drawable/bg"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/growth_integral"
                android:textColor="@color/white_52"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/growth_integral"
                android:textColor="#ffffffff"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/integral_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:textSize="@dimen/sp_35"
            android:textStyle="bold"
            tools:text="1896" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_57"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/integral_ruel"
            android:textColor="@color/black_434242"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:visibility="gone"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_toStartOf="@+id/integral_today"
            android:layout_toLeftOf="@+id/integral_today"
            android:text="@string/today_cumulative"
            android:textColor="@color/black_434242"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/integral_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:textColor="@color/red_d03a28"
            android:textSize="12sp"
            tools:ignore="RtlHardcoded"
            tools:text="1积分" />
    </RelativeLayout>

    <include layout="@layout/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_85"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16"
        android:visibility="gone">

        <TextView
            android:id="@+id/login_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/login_"
            android:textColor="@color/black_434242"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/integral_add_explain"
            android:textColor="@color/gray_999"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/gray_f2f3f4"
            android:gravity="center"
            android:padding="@dimen/dp_9"
            android:text="@string/is_finish"
            android:textColor="@color/black_696f77"
            android:textSize="14sp" />
    </RelativeLayout>

    <include layout="@layout/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_85"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <TextView
            android:id="@+id/read_articles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/read_articles"
            android:textColor="@color/black_434242"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/read_articles"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/integral_add_explain_1"
            android:textColor="@color/gray_999"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/go_and_see"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/color_fcf7ef"
            android:gravity="center"
            android:padding="@dimen/dp_9"
            android:text="@string/go_and_see"
            android:textColor="@color/color_b6a087"
            android:textSize="14sp" />
    </RelativeLayout>

    <include layout="@layout/view_line" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_85"
        android:paddingLeft="@dimen/dp_16"
        android:paddingRight="@dimen/dp_16">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_20"
            android:text="@string/do_answer"
            android:textColor="@color/black_434242"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/do_c_answer"
            android:textColor="@color/gray_999"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/go_and_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@color/color_fcf7ef"
            android:gravity="center"
            android:padding="@dimen/dp_9"
            android:text="@string/go_and_answer"
            android:textColor="@color/color_b6a087"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>