<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_50"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/dp_16"
    android:paddingRight="@dimen/dp_16">

    <TextView
        android:id="@+id/must"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flag_star"
        android:textColor="@color/red"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:textColor="@color/gray_666"
        android:textSize="16sp"
        tools:text="名称" />

    <EditText
        android:id="@+id/value_et"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_weight="1"
        android:background="@null"
        android:digits="@string/id_card"
        android:ellipsize="end"
        android:gravity="end|center_vertical"
        android:singleLine="true"
        android:textColor="@color/black_333"
        android:textColorHint="@color/gray_999"
        android:textSize="@dimen/sp_14" />

    <TextView
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginStart="@dimen/dp_10"
        android:background="@drawable/shape_b_2483f5_c_15"
        android:gravity="center"
        android:paddingStart="13dp"
        android:paddingLeft="13dp"
        android:paddingEnd="13dp"
        android:paddingRight="13dp"
        android:text="@string/check"
        android:textColor="#ffffffff"
        android:textSize="16sp"
        android:visibility="gone" />
</LinearLayout>