<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/include_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/dynamic_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_60"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone">
        <Button
            android:id="@+id/but_transformation"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:visibility="gone"
            android:layout_weight="1"
            android:background="@drawable/shape_b_ffffff_c_19_s_3982f6"
            android:text="@string/transformation_case"
            android:textColor="@color/blue_3982f6"
            android:textSize="16sp" />
        <Button
            android:id="@+id/send_back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_weight="1"
            android:background="@drawable/shape_b_ffffff_c_19_s_3982f6"
            android:text="@string/send_back"
            android:textColor="@color/blue_3982f6"
            android:textSize="16sp" />

        <Button
            android:id="@+id/submit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="@dimen/dp_12"
            android:layout_marginRight="@dimen/dp_12"
            android:layout_weight="1"
            android:background="@drawable/shape_b_3982f6_c_19"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>