<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    style="@style/titleBar"
    android:background="@drawable/top_img1"
    app:contentInsetStart="0dp"
    tools:ignore="RtlHardcoded">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/toolbar_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:drawableStart="@drawable/icon_back"
                android:drawableLeft="@drawable/icon_back"
                android:drawablePadding="5dp"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/input_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/right_btn"
            android:layout_toLeftOf="@id/right_btn"
            android:layout_toEndOf="@id/toolbar_back"
            android:layout_toRightOf="@id/toolbar_back"
            android:background="@drawable/shape_party_red"
            android:gravity="center"
            tools:ignore="NotSibling">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_white_search"
                android:drawableLeft="@drawable/icon_white_search"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:text="@string/input_keyword"
                android:textColor="#FFFDCBC5"
                android:textSize="@dimen/sp_14" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/right_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/integral"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="@dimen/dp_20"
                android:paddingRight="@dimen/dp_20">

                <TextView
                    android:id="@+id/integral_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_17"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/integral"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_10"
                    android:textStyle="bold"
                    android:typeface="serif" />
            </LinearLayout>

            <TextView
                android:id="@+id/my_collect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingLeft="@dimen/dp_10"
                android:paddingRight="@dimen/dp_10"
                android:text="@string/my_collect"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_17"
                android:visibility="gone" />
        </LinearLayout>

    </RelativeLayout>


</androidx.appcompat.widget.Toolbar>